修改目录名

--- a/新标准日本语学习笔记.md
+++ b/新标准日本语学习笔记.md
@@ -708,13 +708,21 @@ A　は　Bです。
 
 ### 第十六课 宾馆的房间又宽敞又明亮
 
-#### 1.
+#### 1.～て、～て～　い形容词并列
+
+一类形容词: 变く＋て
 
 ![image-20201212150740611](新标准日本语学习笔记.assets/image-20201212150740611.png)
 
-#### 2.
+#### 2.～て、～て～　な形容词并列
 
-#### 3.
+二类形容词(An/Na):  だ 变 で
+
+![image-20201212154637407](新标准日本语学习笔记.assets/image-20201212154637407.png)
+
+#### 3.～ています　进行时
+
+![image-20201212160623215](新标准日本语学习笔记.assets/image-20201212160623215.png)
 
 #### 4.
 
