第四单元完结

--- a/新标准日本语学习笔记.md
+++ b/新标准日本语学习笔记.md
@@ -682,7 +682,7 @@ A　は　Bです。
 
 ### 第十五课 小野女士现正正在看报纸
 
-#### 1.～ています　进行时
+#### 1.～て　います　进行时
 
 ![image-20201211204802387](新标准日本语学习笔记.assets/image-20201211204802387.png)
 
@@ -720,11 +720,29 @@ A　は　Bです。
 
 ![image-20201212154637407](新标准日本语学习笔记.assets/image-20201212154637407.png)
 
-#### 3.～ています　进行时
+#### 3.～て　います　动作结束的状态
+
+使用过去式=过去完成时
 
 ![image-20201212160623215](新标准日本语学习笔记.assets/image-20201212160623215.png)
 
-#### 4.
+#### 4.～が、～　转折关系
+
+~が跟着谁就是 虽然, 后面是 但是
+
+![image-20201212165144975](新标准日本语学习笔记.assets/image-20201212165144975.png)
+
+### 四单元复习
+
+#### 数量词
+
+![image-20201212171814022](新标准日本语学习笔记.assets/image-20201212171814022.png)
+
+![image-20201212172542666](新标准日本语学习笔记.assets/image-20201212172542666.png)
+
+#### 助词
+
+![image-20201212172702319](新标准日本语学习笔记.assets/image-20201212172702319.png)
 
 
 
