--- a/新标准日本语学习笔记.md
+++ b/新标准日本语学习笔记.md
@@ -644,6 +644,8 @@ A　は　Bです。
 
 #### 1.て形 动词变形
 
+二类动词词尾通常在 e 段
+
 ![image-20201211140700286](新标准日本语学习笔记.assets/image-20201211140700286.png)
 
 ![image-20201211152812282](新标准日本语学习笔记.assets/image-20201211152812282.png)
@@ -740,15 +742,57 @@ A　は　Bです。
 
 ![image-20201212172542666](新标准日本语学习笔记.assets/image-20201212172542666.png)
 
-#### 助词
+#### で　に　を　助词
 
 ![image-20201212172702319](新标准日本语学习笔记.assets/image-20201212172702319.png)
 
+#### を　から　有/无意志动作
 
+无意志主语: から
+
+有意志主语, 抽象含义的离开: を
+
+具体的有意识的动作可互换
+
+![image-20201212201942313](新标准日本语学习笔记.assets/image-20201212201942313.png)
+
+#### 频率 目的 否定 转折
+
+![image-20201212202824735](新标准日本语学习笔记.assets/image-20201212202824735.png)
+
+![image-20201212204319394](新标准日本语学习笔记.assets/image-20201212204319394.png)
+
+![image-20201212204329106](新标准日本语学习笔记.assets/image-20201212204329106.png)
 
 ## 第五单元
 
 ### 第十七课 我想有套新西服
+
+#### 1.～が　欲しい　 想要/愿望
+
+![image-20201212213735582](新标准日本语学习笔记.assets/image-20201212213735582.png)
+
+![image-20201212215356738](新标准日本语学习笔记.assets/image-20201212215356738.png)
+
+![image-20201212215418518](新标准日本语学习笔记.assets/image-20201212215418518.png)
+
+#### 2.～たい　想要做
+
+变形类似于一类形容词
+
+を　が　这个句型可以互换
+
+![image-20201212220059614](新标准日本语学习笔记.assets/image-20201212220059614.png)
+
+![image-20201212221801388](新标准日本语学习笔记.assets/image-20201212221801388.png)
+
+![image-20201212222144917](新标准日本语学习笔记.assets/image-20201212222144917.png)
+
+#### 3.～ませんか　～ましょう　邀请/提议
+
+![image-20201212223328567](新标准日本语学习笔记.assets/image-20201212223328567.png)
+
+#### 
 
 ### 第十八课 手机变小了
 
