--- a/新标准日本语学习笔记.md
+++ b/新标准日本语学习笔记.md
@@ -1,5 +1,7 @@
 # 新标日初级上
 
+[toc]
+
 ## 书本介绍
 
 ### 书本结构
@@ -796,7 +798,57 @@ A　は　Bです。
 
 ### 第十八课 手机变小了
 
+#### 1.～く/ に　なります　变得/成为
+
+一类形容词 い　く
+
+二类形容词或名词 だ　に
+
+![image-20201213145331246](新标准日本语学习笔记.assets/image-20201213145331246.png)
+
+![image-20201213150102145](新标准日本语学习笔记.assets/image-20201213150102145.png)
+
+#### 2.～く/ に　します　使~变得/决定
+
+一类形容词 い　く
+
+二类形容词或名词 だ　に
+
+表示一种决定
+
+![image-20201213152533169](新标准日本语学习笔记.assets/image-20201213152533169.png)
+
+![image-20201213154940996](新标准日本语学习笔记.assets/image-20201213154940996.png)
+
+#### 3.他动词和自动词
+
+![image-20201213155945710](新标准日本语学习笔记.assets/image-20201213155945710.png)
+
+#### 4.～ほうが　いいです　\~的更\~ 比较好
+
+～ほうが　便利です　更方便
+
+![image-20201213160932072](新标准日本语学习笔记.assets/image-20201213160932072.png)
+
+
+
 ### 第十九课 请别忘了房间钥匙
+
+#### 1.ない形 动词变形
+
+![image-20201213170428854](新标准日本语学习笔记.assets/image-20201213170428854.png)![image-20201213170813244](新标准日本语学习笔记.assets/image-20201213170813244.png)
+
+#### 2.～ないで　ください　命令/要求
+
+![image-20201213171150562](新标准日本语学习笔记.assets/image-20201213171150562.png)
+
+3.
+
+4.
+
+5.
+
+
 
 ### 第二十课 史密斯先生会弹钢琴
 
