增加五单元复习,五单元完结

--- a/新标准日本语学习笔记.md
+++ b/新标准日本语学习笔记.md
@@ -810,9 +810,9 @@ A　は　Bです。
 
 #### 2.～く/ に　します　使~变得/决定
 
-一类形容词 い　く
+一类形容词 い→く
 
-二类形容词或名词 だ　に
+二类形容词或名词 だ→に
 
 表示一种决定
 
@@ -842,19 +842,114 @@ A　は　Bです。
 
 ![image-20201213171150562](新标准日本语学习笔记.assets/image-20201213171150562.png)
 
-3.
+#### 3.～なかれば　なりません　不做不行/必须
 
-4.
+- い→ければ　如果
+- **～なかれば　なりません** 如果不这样做不行 / 必须
+  - 缩略体/口语体: **なきや**
+- 同 **~ないと　いけません**;  ~ないと
+  - 口语: **ないと**
 
-5.
+![image-20201213203741098](新标准日本语学习笔记.assets/image-20201213203741098.png)
 
+#### 4.～なくても　いいです　不做也行/不必
 
+与～なかれば　なりません 相互否定
+
+![image-20201213205552894](新标准日本语学习笔记.assets/image-20201213205552894.png)
+
+#### 5.が　谦虚语气
+
+第一次出现用 が 相当于 a
+
+第二次用 は 相当于 the
+
+谦虚语气
+
+![image-20201213214714088](新标准日本语学习笔记.assets/image-20201213214714088.png)
 
 ### 第二十课 史密斯先生会弹钢琴
+
+#### 1.动词变形规律总结
+
+![image-20201213225108018](新标准日本语学习笔记.assets/image-20201213225108018.png)
+
+#### 2.～ことが　できます　可能/能/会
+
+名词+ する =动词
+
+动词原形+ こと =动名词
+
+![image-20201214152625599](新标准日本语学习笔记.assets/image-20201214152625599.png)
+
+#### 3.～こと + ～は～ます　…是…　
+
++ ～は～ことます
+
+![image-20201214162914648](新标准日本语学习笔记.assets/image-20201214162914648.png)
+
+![image-20201214173145905](新标准日本语学习笔记.assets/image-20201214173145905.png)
+
+#### 4.～前に　动作的前后顺序, …之前
+
+![image-20201214201110395](新标准日本语学习笔记.assets/image-20201214201110395.png)
+
+#### 5.疑问词+か　不确定的名词, 某…
+
+something
+
+somebody
+
+somewhere
+
+sone when 
+
+![image-20201214203952411](新标准日本语学习笔记.assets/image-20201214203952411.png)
+
+### 五单元复习
+
+#### 1.两种想要的比较
+
+![image-20201214212626464](新标准日本语学习笔记.assets/image-20201214212626464.png)
+
+#### 2.成为/变成/使什么变成
+
+人为变化 を
+
+自然变化 が
+
+![image-20201214213348558](新标准日本语学习笔记.assets/image-20201214213348558.png)
+
+#### 3.三种动词变形
+
+![image-20201214214352104](新标准日本语学习笔记.assets/image-20201214214352104.png)
+
+#### 4.禁止/允许
+
+![image-20201214214516981](新标准日本语学习笔记.assets/image-20201214214516981.png)
+
+#### 5.动词的名词形式
+
+1. ～ことが　できます
+   - 能力
+   - 条件
+   - 允许/禁止
+2. ～は～ことます
+3. ～前に　动作的前后顺序, …之前
+
+![image-20201214221311510](新标准日本语学习笔记.assets/image-20201214221311510.png)
+
+#### 6.～ほうが　いいです　比较级, 还是…好
+
+1. 还是…比较[形容词]
+
+![image-20201214222340996](新标准日本语学习笔记.assets/image-20201214222340996.png)
 
 ## 第六单元
 
 ### 第二十一课 我吃过日式牛肉火锅
+
+
 
 ### 第二十二课 森先生每天晚上看电视
 
