--- a/新标准日本语学习笔记.md
+++ b/新标准日本语学习笔记.md
@@ -834,11 +834,11 @@ A　は　Bです。
 
 ### 第十九课 请别忘了房间钥匙
 
-#### 1.ない形 动词变形
+#### 1.ない形 动词变形,否定
 
 ![image-20201213170428854](新标准日本语学习笔记.assets/image-20201213170428854.png)![image-20201213170813244](新标准日本语学习笔记.assets/image-20201213170813244.png)
 
-#### 2.～ないで　ください　命令/要求
+#### 2.～ないで　ください　命令/要求,请不要
 
 ![image-20201213171150562](新标准日本语学习笔记.assets/image-20201213171150562.png)
 
@@ -949,73 +949,379 @@ sone when
 
 ### 第二十一课 我吃过日式牛肉火锅
 
+#### 1.た形 动词变形 过去时的简体
+
+![image-20201214230449135](新标准日本语学习笔记.assets/image-20201214230449135.png)
+
+#### 2.～ことが　あります　有过…某种人生经历
+
+问经历有没有, あります　不用过去式
+
+![image-20201214232038732](新标准日本语学习笔记.assets/image-20201214232038732.png)
+
+#### 3.～後で、～　…之后…
+
+一个动作在另一个动作后
+
+![image-20201214234751090](新标准日本语学习笔记.assets/image-20201214234751090.png)
+
+#### 4.～ほうが　いいです　　建议对方,最好… , …更好
+
+![image-20201215151231458](新标准日本语学习笔记.assets/image-20201215151231458.png)
+
+![image-20201215153623756](新标准日本语学习笔记.assets/image-20201215153623756.png)
+
+ほうが　いいですが我是不是应该　ほうが　いいですね我是不是应该
+
+![image-20201215154002736](新标准日本语学习笔记.assets/image-20201215154002736.png)
+
+#### 5.～ましょうか　提议一起做/提议为对方做; 
+
+一起…怎么样? / 我来…做吧/我给你…吧
+
+ます→ましょ
+
+ましょ 没有 ませんか 柔和.
+
+![image-20201215160135768](新标准日本语学习笔记.assets/image-20201215160135768.png)
+
 
 
 ### 第二十二课 森先生每天晚上看电视
 
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
+
 ### 第二十三课 周末或节假日, 有时散步, 有时买东西
 
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
+
 ### 第二十四课 我想小李马上就来
+
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
 
 ## 第七单元
 
 ### 第二十五课 这是明天会议要用的资料
 
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
+
 ### 第二十六课 骑自行车带人很危险
+
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
 
 ### 第二十七课 我小时候发生过大地震
 
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
+
 ### 第二十八课 小马给了我一张地图
+
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
 
 ## 第八单元
 
 ### 第二十九课 关灯!
 
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
+
 ### 第三十课 已经十一点了, 睡觉吧
+
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
 
 ### 第三十一课 按下这个钮, 电源就接通了
 
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
+
 ### 第三十二课 这个星期天打算去游乐园
+
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
 
 ## 第九单元 
 
 ### 第三十三课 电车突然停了
 
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
+
 ### 第三十四课 墙上挂着挂历
+
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
 
 ### 第三十五课 明天要是下雨, 马拉松大会就不搞了
 
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
+
 ### 第三十六课 我迟到了, 真抱歉
+
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
 
 ## 第十单元
 
 ### 第三十七课 如果获胜, 就能够参加奥运会
 
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
+
 ### 第三十八课 小戴会说英语
+
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
 
 ### 第三十九课 戴着眼镜看书
 
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
+
 ### 第四十课 正要和朋友一起去吃饭
+
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
 
 ## 第十一单元 
 
 ### 第四十一课 小李受到部长表扬
 
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
+
 ### 第四十二课 开着电视就出门了
+
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
 
 ### 第四十三课 老陈让儿子去美国留学
 
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
+
 ### 第四十四课 门厅哪儿好像有人
+
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
 
 ## 第十二单元
 
 ### 第四十五课 孩子减少现象日益加剧, 日本人口将会越来越少
 
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
+
 ### 第四十六课 这个软软乎乎的, 好像真皮一样
+
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
 
 ### 第四十七课 周老师明天去日本
 
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
+
 ### 第四十八课 你的行李我来拿
+
+#### 1.
+
+#### 2.
+
+#### 3.
+
+#### 4.
+
+
 
 
 
