--- a/新标准日本语学习笔记.md
+++ b/新标准日本语学习笔记.md
@@ -243,9 +243,9 @@
 
 
 
-
-
 ## 第一单元
+
+课件制作老师: 早道日语 迷加老师
 
 ### 数字
 
@@ -989,25 +989,85 @@ sone when
 
 ### 第二十二课 森先生每天晚上看电视
 
-#### 1.
+#### ~方法 吃法 步法 看法 制作做法 办法 
 
-#### 2.
+![image-20201215202111059](新标准日本语学习笔记.assets/image-20201215202111059.png)
 
-#### 3.
+#### 嗯, 嗯~?
 
-#### 4.
+![image-20201215202746253](新标准日本语学习笔记.assets/image-20201215202746253.png)
 
+#### 1.动词变形 礼貌体/敬体 普通体/简体 过去时
 
+上下敬体简体表一一对应, 敬体全部可以变成简体
+
+ます→た形→ました 
+
+![image-20201215202836171](新标准日本语学习笔记.assets/image-20201215202836171.png)
+
+#### 2.简体变形 敬体/简体
+
+区别: です
+
+特殊: いい　よくない　よかった　よくなった
+
+![image-20201215205747183](新标准日本语学习笔记.assets/image-20201215205747183.png)
+
+#### 3.二类形容词/名词的简体/敬体
+
+　描述变化时, 形容词和名词用法相同: なります
+
+**でした＝だった**
+
+じゃ＝では
+
+![image-20201215211020195](新标准日本语学习笔记.assets/image-20201215211020195.png)
+
+#### 4.口语表达
+
+![image-20201215212342647](新标准日本语学习笔记.assets/image-20201215212342647.png)![image-20201215213026445](新标准日本语学习笔记.assets/image-20201215213026445.png)![image-20201215213550455](新标准日本语学习笔记.assets/image-20201215213550455.png)
+
+**尽量使用简体练习对话**
 
 ### 第二十三课 周末或节假日, 有时散步, 有时买东西
 
-#### 1.
+日语中是动词, 汉语中是形容状态的词, 那么是自动词
 
-#### 2.
+#### 1.～たり　～たり　します　列举动作,暗示还有,做做…啊
 
-#### 3.
+名词　や　や　など
 
-#### 4.
+![image-20201215222638494](新标准日本语学习笔记.assets/image-20201215222638494.png)
+
+#### 2.～たり　～たり　です　列举,多种状态并存/交替,有的…有的…
+
+可以多词性混用
+
+列举反义词时为交替
+
+加名词是, 说不准的意思
+
+![image-20201215224806689](新标准日本语学习笔记.assets/image-20201215224806689.png)
+
+#### 3.～かどうか　将疑问句放在另一个句子中,表不确定, 是否
+
+二类形容词和名词简体为　だ　时去掉　だ
+
+![image-20201215234953593](新标准日本语学习笔记.assets/image-20201215234953593.png)
+
+从句中主语用が
+
+![image-20201216003047911](新标准日本语学习笔记.assets/image-20201216003047911.png)
+
+![image-20201216141834717](新标准日本语学习笔记.assets/image-20201216141834717.png)
+
+#### 4.～か　特殊疑问句简体
+
+二类形容词和名词简体为　だ　时去掉　だ
+
+![image-20201216142526750](新标准日本语学习笔记.assets/image-20201216142526750.png)
+
+![image-20201216142905499](新标准日本语学习笔记.assets/image-20201216142905499.png)
 
 
 
