增加24课,六单元复习

--- a/新标准日本语学习笔记.md
+++ b/新标准日本语学习笔记.md
@@ -1005,7 +1005,7 @@ sone when
 
 ![image-20201215202836171](新标准日本语学习笔记.assets/image-20201215202836171.png)
 
-#### 2.简体变形 敬体/简体
+#### 2.一类形容词变形 敬体/简体
 
 区别: です
 
@@ -1073,15 +1073,123 @@ sone when
 
 ### 第二十四课 我想小李马上就来
 
-#### 1.
+#### 1.～と　思います　个人见解,推测
 
-#### 2.
+と　不固定
 
-#### 3.
+接简体
 
-#### 4.
+黄色用第一人称
+
+白色不限人称
+
+![image-20201216155615531](新标准日本语学习笔记.assets/image-20201216155615531.png)
+
+关于xx你怎么看?
+
+![image-20201216162518108](新标准日本语学习笔记.assets/image-20201216162518108.png)
+
+#### 2.～と　言います　直接引语/间接引语
+
+ました：一般用过去时
+
+ます：真理性或将来时用现在时
+
+～と　いっています：反复动作
+
+「」直接引语
+
+![image-20201216163001418](新标准日本语学习笔记.assets/image-20201216163001418.png)
+
+#### 3.～のです/んです　现象解释/说明
+
+正式: ～のです
+
+口语: んです
+
+![image-20201216170454826](新标准日本语学习笔记.assets/image-20201216170454826.png)
+
+客观性询问不用此句型
+
+![image-20201216172029024](新标准日本语学习笔记.assets/image-20201216172029024.png)
+
+#### 4.～のです/んです　现象解释/说明
+
+![image-20201216173132198](新标准日本语学习笔记.assets/image-20201216173132198.png)
+
+副词可以+なのです/んです
+
+### 六单元复习
+
+#### 动词た形
+
+![image-20201216222348324](新标准日本语学习笔记.assets/image-20201216222348324.png)
+
+#### た　形语法例句
+
+![image-20201216222702809](新标准日本语学习笔记.assets/image-20201216222702809.png)
+
+![image-20201216223515648](新标准日本语学习笔记.assets/image-20201216223515648.png)
+
+#### 动词简体敬体
+
+![image-20201215202836171](新标准日本语学习笔记.assets/image-20201215202836171.png)
+
+#### 一类形容词简体敬体
+
+![image-20201215205747183](新标准日本语学习笔记.assets/image-20201215205747183.png)
+
+#### 二类形容词/名词简体敬体
+
+![image-20201215211020195](新标准日本语学习笔记.assets/image-20201215211020195.png)
+
+#### 简体/敬体语法例句
+
+![image-20201216225844289](新标准日本语学习笔记.assets/image-20201216225844289.png)
+
+![image-20201216231023427](新标准日本语学习笔记.assets/image-20201216231023427.png)
+
+## 上册总复习
+
+### 总复习一: 助词
+
+#### 体言
+
+![image-20201217154631570](新标准日本语学习笔记.assets/image-20201217154631570.png)
+
+#### 数量词
+
+![image-20201217155701460](新标准日本语学习笔记.assets/image-20201217155701460.png)
+
+![image-20201217205924950](新标准日本语学习笔记.assets/image-20201217205924950.png)
+
+#### 助词
+
+![image-20201217210601827](新标准日本语学习笔记.assets/image-20201217210601827.png)
+
+が顺接: 承上启下
+
+が逆接: 转折
+
+はがは复合: 对比；は提示对比内容
+
+![image-20201217212128798](新标准日本语学习笔记.assets/image-20201217212128798.png)
 
 
+
+
+
+
+
+
+
+
+
+
+
+### 总复习二: 动词
+
+### 总复习三: N5模拟题
 
 ## 第七单元
 
