增加总复习1

--- a/新标准日本语学习笔记.md
+++ b/新标准日本语学习笔记.md
@@ -1167,15 +1167,39 @@ sone when
 
 ![image-20201217210601827](新标准日本语学习笔记.assets/image-20201217210601827.png)
 
+接续助词
+
+![image-20201217230044586](新标准日本语学习笔记.assets/image-20201217230044586.png)
+
 が顺接: 承上启下
 
 が逆接: 转折
 
 はがは复合: 对比；は提示对比内容
 
+が谦虚语气
+
 ![image-20201217212128798](新标准日本语学习笔记.assets/image-20201217212128798.png)
 
+完全列举: と　と
 
+不完全列举:　や　や　なと
+
+![image-20201217212857042](新标准日本语学习笔记.assets/image-20201217212857042.png)
+
+运动都用で
+
+![image-20201217213058922](新标准日本语学习笔记.assets/image-20201217213058922.png)
+
+![image-20201217213412631](新标准日本语学习笔记.assets/image-20201217213412631.png)
+
+に：抽象目的地
+
+![image-20201217214543065](新标准日本语学习笔记.assets/image-20201217214543065.png)
+
+
+
+#### 1
 
 
 
