增加总复习2

--- a/新标准日本语学习笔记.md
+++ b/新标准日本语学习笔记.md
@@ -1131,15 +1131,15 @@ sone when
 
 ![image-20201216223515648](新标准日本语学习笔记.assets/image-20201216223515648.png)
 
-#### 动词简体敬体
+#### 动词简体/敬体
 
 ![image-20201215202836171](新标准日本语学习笔记.assets/image-20201215202836171.png)
 
-#### 一类形容词简体敬体
+#### 一类形容词简体/敬体
 
 ![image-20201215205747183](新标准日本语学习笔记.assets/image-20201215205747183.png)
 
-#### 二类形容词/名词简体敬体
+#### 二类形容词/名词简体/敬体
 
 ![image-20201215211020195](新标准日本语学习笔记.assets/image-20201215211020195.png)
 
@@ -1151,7 +1151,7 @@ sone when
 
 ## 上册总复习
 
-### 总复习一: 助词
+### 总复习一: 体言
 
 #### 体言
 
@@ -1171,7 +1171,7 @@ sone when
 
 ![image-20201217230044586](新标准日本语学习笔记.assets/image-20201217230044586.png)
 
-が顺接: 承上启下
+##### が顺接: 承上启下
 
 が逆接: 转折
 
@@ -1181,37 +1181,127 @@ sone when
 
 ![image-20201217212128798](新标准日本语学习笔记.assets/image-20201217212128798.png)
 
-完全列举: と　と
+##### 完全列举: と　と
 
 不完全列举:　や　や　なと
 
 ![image-20201217212857042](新标准日本语学习笔记.assets/image-20201217212857042.png)
 
-运动都用で
+##### 运动都用で
 
 ![image-20201217213058922](新标准日本语学习笔记.assets/image-20201217213058922.png)
 
 ![image-20201217213412631](新标准日本语学习笔记.assets/image-20201217213412631.png)
 
-に：抽象目的地
+##### に：抽象目的地
 
 ![image-20201217214543065](新标准日本语学习笔记.assets/image-20201217214543065.png)
 
+#### 测试题
 
+![image-20201218173325867](新标准日本语学习笔记.assets/image-20201218173325867.png)
 
-#### 1
-
-
-
-
-
+![image-20201218173337032](新标准日本语学习笔记.assets/image-20201218173337032.png)
 
 
 
+### 总复习二: 用言
+
+#### 形容词
+
+![image-20201217230305297](新标准日本语学习笔记.assets/image-20201217230305297.png)
+
+##### 比较级/最高级
+
+![image-20201217230525071](新标准日本语学习笔记.assets/image-20201217230525071.png)
+
+自动词: なる→なります　
+
+他动词:  する→します
+
+名词+ に＋なる：时间/季节/年龄变化
+
+名词+ に＋する・します：使变成/决定
+
+##### 固定搭配助词
+
+![image-20201217231843037](新标准日本语学习笔记.assets/image-20201217231843037.png)
+
+想要做某个动作的内容: が　を　可以互换, 想要东西只用が
+
+##### 停顿连用
+
+![image-20201217232855545](新标准日本语学习笔记.assets/image-20201217232855545.png)
+
+#### 动词
+
+![image-20201217233150923](新标准日本语学习笔记.assets/image-20201217233150923.png)
+
+##### ます形/连用形
+
+![image-20201217233230404](新标准日本语学习笔记.assets/image-20201217233230404.png)
+
+##### 原形=字典形=基本形
+
+![image-20201217233930362](新标准日本语学习笔记.assets/image-20201217233930362.png)
+
+##### て形　停顿
+
+![image-20201218150602512](新标准日本语学习笔记.assets/image-20201218150602512.png)
+
+##### て形　命令
+
+![image-20201218151406706](新标准日本语学习笔记.assets/image-20201218151406706.png)
+
+对上级+ませんが　更礼貌
+
+ゆっくり：好好的, 放松的
+
+认真的, 好好的: ちゃんと
+
+##### た形
+
+た形+之后（後で）
+
+![image-20201218153113991](新标准日本语学习笔记.assets/image-20201218153113991.png)
+
+##### ない形
+
+![image-20201218153726564](新标准日本语学习笔记.assets/image-20201218153726564.png)
+
+##### 动词简体/敬体
+
+![image-20201215202836171](新标准日本语学习笔记.assets/image-20201215202836171.png)
+
+##### 一类形容词简体/敬体
+
+![image-20201215205747183](新标准日本语学习笔记.assets/image-20201215205747183.png)
+
+##### 二类形容词/名词简体敬体
+
+![image-20201215211020195](新标准日本语学习笔记.assets/image-20201215211020195.png)
+
+##### 普通形/简体例句
+
+![image-20201218154753808](新标准日本语学习笔记.assets/image-20201218154753808.png)
+
+～のです・んです
+
+#### 存在句
+
+![image-20201218155806005](新标准日本语学习笔记.assets/image-20201218155806005.png)
+
+#### 授受关系
+
+![image-20201218160146046](新标准日本语学习笔记.assets/image-20201218160146046.png)
+
+#### 测试题
+
+![image-20201218173400394](新标准日本语学习笔记.assets/image-20201218173400394.png)
+
+![image-20201218173409658](新标准日本语学习笔记.assets/image-20201218173409658.png)
 
 
-
-### 总复习二: 动词
 
 ### 总复习三: N5模拟题
 
