--- a/新标准日本语学习笔记.md
+++ b/新标准日本语学习笔记.md
@@ -1309,13 +1309,21 @@ sone when
 
 ### 第二十五课 这是明天会议要用的资料
 
-#### 1.
+#### 1.连体修饰-定语从句
 
-#### 2.
+![image-20201219205148974](新标准日本语学习笔记.assets/image-20201219205148974.png)
 
-#### 3.
+#### 2.定语从句当名词使用
 
-#### 4.
+![image-20201219215400956](新标准日本语学习笔记.assets/image-20201219215400956.png)
+
+![image-20201219224703456](新标准日本语学习笔记.assets/image-20201219224703456.png)
+
+#### 3.连体修饰 形容词/名词修饰名词
+
+![image-20201219233658136](新标准日本语学习笔记.assets/image-20201219233658136.png)
+
+![image-20201220004102608](新标准日本语学习笔记.assets/image-20201220004102608.png)
 
 
 
@@ -1635,13 +1643,17 @@ sone when
 
 
 
+每阶段固定时间
+
+单词 25分钟
+
+语法+阅读 50分钟
+
+听力 30分钟
 
 
 
-
-
-
-
+alt+~切换字母和日语输入
 
 ## 日语语法 附录
 
