补充语法兔语法概念

--- a/王菲英语语法.md
+++ b/王菲英语语法.md
@@ -6,41 +6,51 @@
 
 ### <u>十种</u>词性
 
-1. 介词
-2. 冠词
-3. 名词
-4. 代词
-5. 数词
-6. 副词
-7. 形容词
-8. 动词
-9. 连词
+1. 介词 Prepositions
+2. 冠词 Articles
+3. 名词 Nouns
+4. 代词 Pronouns
+5. 数词 Numerals
+6. 副词 Adverbs
+7. 形容词 Adjectives
+8. 动词 Verbs
+9. 连词 Conjunctions
 10. 感叹词（只有叹词没有语法内容）
 
 ### <u>九种</u>句子成分
 
-1. 主语
-2. 谓语
-3. 宾语
-4. 表语
-5. 双宾
-6. 同位语
-7. 宾补
-8. 定语
-9. 状语
+1. 主语 Subject
+2. 谓语 Predicate Verb
+3. 宾语 Object
+4. 表语 Predicative（主语补语）
+5. 双宾 
+7. 宾补 Object Complement
+8. 定语 Attributive
+9. 状语 Adverbial
+9. 同位语 Appositive
 
 ### <u>八种</u>句式
 
-- **<u>五种</u>基础简单句**
+![image-20210420224004676](王菲英语语法.assets/image-20210420224004676.png)
+
+**五种基本句型源于动词性质**
+
+- **<u>五种</u>基础简单句** Simple Sentence
   1. 主 + 谓 + 宾
   2. 主 + 系 + 表
   3. 主 + 谓 + 双宾
   4. 主 + 谓 + 宾补
   5. 主 + 谓
-- **<u>三种</u>高级复合句**
+- **<u>三种</u>高级复合句** Complex Sentence 复杂句
   1. 名词性从句
+     1. 主语从句
+     2. 宾语从句
+     3. 表语从句
+     4. 同位语从句
   2. 定语从句
   3. 状语从句
+
+![image-20210420225507792](王菲英语语法.assets/image-20210420225507792.png)
 
 ### 王菲语法树
 
@@ -2481,6 +2491,10 @@
 
 ## 七、动词
 
+![image-20210420225946839](王菲英语语法.assets/image-20210420225946839.png)
+
+![image-20210420230308625](王菲英语语法.assets/image-20210420230308625.png)
+
 ### 7.1 动词的分类
 
 #### 7.1.1 实义动词 (行为动词)
@@ -2517,7 +2531,7 @@
    - The windshield wipers **wiped** <u>across the windshield</u>.
      - 风挡刮水器在挡风玻璃上刮来刮去.(无宾语)
 
-#### 7.1.2 助动词和情态动词
+#### 7.1.2 助动词（Auxiliary Verbs）和情态动词
 
 ①协助主要动词构成谓语的词叫助动词;
 ②**没有实际意义, 不可单独使用**
@@ -3114,6 +3128,8 @@
         - The girls little brother is **taken good care of** by her
 
 ### 7.5 动词语法 - 非谓语动词
+
+![image-20210420230031839](王菲英语语法.assets/image-20210420230031839.png)
 
 **非谓语动词 "4有1不" **
 
