--- a/新标准日本语学习笔记.md
+++ b/新标准日本语学习笔记.md
@@ -1835,59 +1835,55 @@ alt+~切换字母和日语输入
 
 
 
-启动阶段五十音背的滚瓜烂熟
-（必须平假名+片假名一起）
-了解一些基本的概念
-比如音读训读，汉字词和语词
-3.5开始看叶子老师在b站的初级标日课
-1做随堂笔记
-2每天复习前一天的笔记和语法
-3走路听头天的课文和单词（喜马拉雅）
-4期间还把新东方的教材
-《从零快乐学日语语法》下册过了一
-查缺补漏
-5花一下午边剧剧边过了一遍N4语法书
-发现自己敬语部分薄弱，恶补加深印象
+- 启动阶段五十音背的滚瓜烂熟
+  （必须平假名+片假名一起）
+  了解一些基本的概念
+  比如音读训读，汉字词和语词
+  3.5开始看叶子老师在b站的初级标日课
+  1做随堂笔记
+  2每天复习前一天的笔记和语法
+  3走路听头天的课文和单词（喜马拉雅）
+  4期间还把新东方的教材
+  《从零快乐学日语语法》下册过了一
+  查缺补漏
+  5花一下午边剧剧边过了一遍N4语法书
+  发现自己敬语部分薄弱，恶补加深印象
+- 4.3学完标日初级，开始自学标日中级
+  4.14放弃课本，开始石语法书、词汇书
+  比较后选择《全力出击》词汇、语法
+  语法200个必背，词汇6000个尽量
+  每天看一篇语法，一篇词汇，并复习下
+  前一天的内容做练习题
+  接续连体词>动词>形容词>名词外来
+  走路听语法（莜）单词（黑皮）
+  选看《完全解析》填补基础沟壑，注重
+  复合词接头接尾多义词
+  515考试周开始日语份额缩水
+  522做了第一套完整题，被血虐
+  《全真模拟试题解析版》
+  发现差距：听力阅读
+  时间紧一不熟练/不集中
+- 523阅读听力训练兼顾语法词汇
+  《新完全掌握》阅读、听力
+  《听力深度解密》
+  先熟悉题型（了如指掌），再提升素养
+  只做了例题，没有管练习
+  快速形成应试思维方式
+  6.5完成所有196个语法
+  专业课考试瑞不过气暂时放下日语
+  考完一科的当晚做一套真题（2）
+  挤出少量时间做听力训练
+  走路听音频，零碎时间看小D收藏
 
-4.3学完标日初级，开始自学标日中级
-4.14放弃课本，开始石语法书、词汇书
-比较后选择《全力出击》词汇、语法
-语法200个必背，词汇6000个尽量
-每天看一篇语法，一篇词汇，并复习下
-前一天的内容做练习题
-接续连体词>动词>形容词>名词外来
-走路听语法（莜）单词（黑皮）
-选看《完全解析》填补基础沟壑，注重
-复合词接头接尾多义词
-515考试周开始日语份额缩水
-522做了第一套完整题，被血虐
-《全真模拟试题解析版》
-发现差距：听力阅读
-时间紧一不熟练/不集中
-
-
-
-523阅读听力训练兼顾语法词汇
-《新完全掌握》阅读、听力
-《听力深度解密》
-先熟悉题型（了如指掌），再提升素养
-只做了例题，没有管练习
-快速形成应试思维方式
-6.5完成所有196个语法
-专业课考试瑞不过气暂时放下日语
-考完一科的当晚做一套真题（2）
-挤出少量时间做听力训练
-走路听音频，零碎时间看小D收藏
-
-630下午四点考完最后一门专业课
-当晚：一套真题井订正
-复习《完全解析》
-7.1下午：复习196个语法（看目录）
-复习系统性笔记
-晚上：一套真题并订正
-《最好考前做过这些题》
-顺序：副词复合动词其他
-动词形容词名词
-72中午进考场前
-继续看《最好考前做过这些题》
+- 630下午四点考完最后一门专业课
+  当晚：一套真题井订正
+  复习《完全解析》
+  7.1下午：复习196个语法（看目录）
+  复习系统性笔记
+  晚上：一套真题并订正
+  《最好考前做过这些题》
+  顺序：副词复合动词其他
+  动词形容词名词
+  72中午进考场前
+  继续看《最好考前做过这些题》
 
