增加长音规则

--- a/新标日课程0到N1.md
+++ b/新标日课程0到N1.md
@@ -52,7 +52,7 @@
 
 以此类推。
 
-日语的高音节不能分在两处。即一个单词（包括后续的助词在内）中只能有**“高低低”、“低高低”、及“低高高”**等声调配置形式，而不可能出现类似**“高低高”、“低高低高”或“高低高低”**等声调配置。无论多长的单词，其声调配置都必须符合这个规律。
+日语的高音节不能分在两处。即**一个单词（包括后续的助词在内）中只能有“高低低”、“低高低”、及“低高高”等声调配置形式，而不可能出现类似“高低高”、“低高低高”或“高低高低”等声调配置**。无论多长的单词，其声调配置都必须符合这个规律。
 
 另外，当两个单词组成一个合成词时，第二个单词的**第一个假名常常用重读**。例如：
 
@@ -73,3 +73,47 @@
 
 
 ### 长音规则
+
+日语长音怎么读? 日语长音规则究竟是什么? 日语中一个假名相当于一个节拍，也称作短音，例如之前我们所学过的清音、浊音、半浊音、促音等。
+
+将短音的发音时间拖长一拍就是长音。也就是说，长音相当于两个节拍。具体发音特征如下。 
+
+1. **“あ”、“い”、“う”**段假名分别在其后加**“あ”、“い”、“う”**构成长音。 
+2. **“え”**段假名在其后加**“い”**构成长音。但是个别单词中也有加**“え”**的。 
+3. **“お”**段假名在其后加**“う”**构成长音。但是个别单词中也有加**“お”**的。
+4. 用片假名书写的外来语用长音符号**“一”**来表示。 
+5. 用罗马字标记时，既可以在元音上标注**“一”**来表示长音，也可以通过双写元音字母来表示长音。
+
+> あ段假名后加あ，如：おかあさん い段假名后加い，如：おにいさん 
+>
+> う段假名后加う，如：つうやく 
+>
+> え段假名后加い，如：せんせい 
+>
+> お段假名后加う，如：おとうさん 
+>
+> 外来语长音用ー表示：如：ノート 
+>
+> 另外，特殊场合下：え段假名后加え，如：おねえさん
+>
+> お段假名后加お，如：おおきい。
+
+- あ段接「あ」
+- い段接「い」
+- う段接 「う」
+- え段接「い」，偶尔也有接「え」的情况
+- お段接「う」，偶尔也有接「お」的情况
+
+【长音表示】
+
+平假名：以「あ」「い」「え」「う」「お」表示长音
+
+片假名：以长音符号「ー」表示长音
+
+平假名：
+
+- /~a/ お母さん「おかあさん」(母亲)
+- /~i/ 兄さん「にいさん」(哥哥)
+- /~u/ 数字「すうじ」(数字)
+- /~e/ お姉さん「おねえさん」(姐姐)
+- /~o/ 弟「おとうと」 (弟弟)
