增加第一章

--- a/新标准日本语学习笔记.md
+++ b/新标准日本语学习笔记.md
@@ -247,6 +247,13 @@
 
 课件制作老师: 早道日语 迷加老师
 
+### 背单词的方法：
+
+1. 预习，过一遍所有单词。
+2. 一两小时把所有单词过一遍。边读边写，听写，默写。
+3. 熟知的单词不再重复，难背的单词小本子记下来单独背。
+4. 平时看到东西就想用日语描述。
+
 ### 数字
 
 ![image-20201123204108097](新标准日本语学习笔记.assets/image-20201123204108097.png)
