--- a/新标日课程0到N1.md
+++ b/新标日课程0到N1.md
@@ -1,5 +1,11 @@
 # [日语学习：新标日课程0到N1](https://www.bilibili.com/video/BV1Bp4y1D747)
 
+1. **我选择/我要学日语** （vs.我必须/我一定得好好学日语）
+2. **这个任务我可以每次做一小步** （vs.这个任务太大了）
+3. **我今天要开始背几个单词** （vs.我今天必须把这一课单词都背完）
+4. **我也可以是平凡人** （vs.我必须完美/出类拔萃）
+5. **我一定要休息娱乐/休息娱乐是正常生活的一部分** （vs.我没空休息娱乐/休息娱乐就是偷懒）
+
 ## 发音
 
 ### 高低音规则
