第一课笔记更新

--- a/新标日课程0到N1.md
+++ b/新标日课程0到N1.md
@@ -1,5 +1,31 @@
 # [日语学习：新标日课程0到N1](https://www.bilibili.com/video/BV1Bp4y1D747)
 
+## 问：各个级别的试卷结构与能力要求是什么？
+
+| 级别                   | 试卷结构                          | 认定标准 |      |                                                              |
+| ---------------------- | --------------------------------- | -------- | ---- | ------------------------------------------------------------ |
+| 类别                   | 时间                              | 分数     |      |                                                              |
+| N1                     | 语言知识(文字、词汇、语法）、阅读 | 110      | 120  | 能够理解各种场面的日语 【读】能够阅读有关各类话题的报纸社论、评论等逻辑性稍强、抽象度高的文章，理解文章的构成及内容。 能够阅读有关各类话题的深层次内容的读物，理解上下文及具体的表达意图。 【听】能够听懂各种场合一般语速的连贯会话、新闻及讲座内容，详细理解上下文含义、出场人物的关系及内容的逻辑构成等，掌握大意。 |
+| 听力                   | 55                                | 60       |      |                                                              |
+| 所需时间               | **175**                           | 180      |      |                                                              |
+| N2                     | 语言知识(文字、词汇、语法）、阅读 | 105      | 120  | 能够理解日常生活中的日语，和一定程度上理解各种场面的日语 【读】能够阅读和理解有关各类话题的报纸及杂志报导、解说、简单的评论等论点清晰的文章的内容。 能够阅读有关一般话题的读物，理解上下文及表达意图。 【听】除了日常生活中的日语外，能够听懂接近一般语速的各种场面的连贯会话及新闻，理解上下文含义、出场人物的关系，掌握大意。 |
+| 听力                   | 50                                | 60       |      |                                                              |
+| 所需时间               | **165**                           | 180      |      |                                                              |
+| N3                     | 语言知识（文字、词汇）            | 30       | 120  | 能够在一定程度上理解日常生活中的日语 【读】能够阅读和理解日常话题中表达具体内容的文章。 能够通过报纸的标题了解文章的大致内容。 在日常生活中，对于难度稍高的文章，通过解释或改变表达方式能够理解其大意。 【听】能够大致听懂接近一般语速的有关日常生活的连贯会话，大致理解会话的具体内容及出场人物的关系等。 |
+| 语言知识（语法）、阅读 | 70                                |          |      |                                                              |
+| 听力                   | 40                                | 60       |      |                                                              |
+| 所需时间               | **155**                           | 180      |      |                                                              |
+| N4                     | 语言知识（文字、词汇）            | 25       | 120  | 能够理解基本的日语 【读】能够阅读和理解使用基本词汇及汉字书写的有关日常生活话题的文章。 【听】能够大致听懂语速稍慢的有关日常生活的会话。 |
+| 语言知识（语法）、阅读 | 55                                |          |      |                                                              |
+| 听力                   | 35                                | 60       |      |                                                              |
+| 所需时间               | **130**                           | 180      |      |                                                              |
+| N5                     | 语言知识（文字、词汇）            | 20       | 120  | 能够在一定程度上理解基本的日语 【读】能够阅读和理解使用平假名、片假名及用于日常生活中的基本汉字书写的惯用短语、句子及文章。 【听】能够听懂语速缓慢的课堂用语及日常生活用语中的简单会话。 |
+| 语言知识（语法）、阅读 | 40                                |          |      |                                                              |
+| 听力                   | 30                                | 60       |      |                                                              |
+| 所需时间               | **105**                           | 180      |      |                                                              |
+
+
+
 1. **我选择/我要学日语** （vs.我必须/我一定得好好学日语）
 2. **这个任务我可以每次做一小步** （vs.这个任务太大了）
 3. **我今天要开始背几个单词** （vs.我今天必须把这一课单词都背完）
