增加数字读音

--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -372,6 +372,14 @@
 | ---------- | ---------------- | ---------- | ---------------- | ------------ |
 | 六（ろく） | 七（しち　なな） | 八（はち） | 九（く　きゅう） | 十（じゅう） |
 
+零到一百读音
+
+![image-20201123204108097](新标准日本语学习笔记-ミカ先生.assets/image-20201123204108097.png)
+
+一百以上读音
+
+![image-20201123204156155](新标准日本语学习笔记-ミカ先生.assets/image-20201123204156155.png)
+
 
 
 ### 第二课
@@ -380,11 +388,7 @@
 
 ### 第三课
 
-#### 数字
 
-![image-20201123204108097](新标准日本语学习笔记.assets/image-20201123204108097.png)
-
-![image-20201123204156155](新标准日本语学习笔记.assets/image-20201123204156155.png)
 
 #### 亲属称呼
 
