增加第二课

--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -384,17 +384,39 @@
 
 ### 第二课
 
+#### 单词
 
+- ノート
+- 手帳
+- パーソナルコンピューター　（ピュア　纯粹的）
+- かぎ
+- 机　｜　テーブル
+- 新聞　｜　ニュース
+- カメラ　＝　デジカメ　＝　デジタルカメラ
+- 一眼レフカメラ　＝　一眼レフ　单反相机
+- 電話　＋　自転車　＝　電車
+
+#### 亲属称呼
+
+![image-20201123204132769](新标准日本语学习笔记-ミカ先生.assets/image-20201123204132769.png)
+
+- 描述我亲属用左边不加敬语, 称呼或者描述别人的亲属时都要敬语
+
+#### 语法解释
+
+##### 1．これ／それ／あれ　は　「名」です
+
+##### ２．誰ですか／何ですか
+
+##### ３．この／その／あの
+
+##### ４．どれ／どの
 
 ### 第三课
 
 
 
-#### 亲属称呼
 
-![image-20201123204132769](新标准日本语学习笔记.assets/image-20201123204132769.png)
-
-- 描述我亲属用左边不加敬语, 称呼或者描述别人的亲属时都要敬语
 
 
 
